# analyxa

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docker/: docker-compose.yaml
docs/: IF-001.md  IF-002.md  IF-003.md  IF-004.md  IF-005.md  IF-006.md  IF-007.md  IF-008.md  IF-009.md  INSTRUCCION-ACTUALIZAR-MEMORIA.md  api-reference.md  fiverr-gig.md  quickstart.md  schemas.md
examples/conversations/: coaching_crisis.txt  coaching_progress.txt  coaching_progress_pt.txt  sales_demo.txt  sales_inquiry_fr.txt  sales_objection.txt  support_billing.txt  support_billing_de.txt  support_billing_es.txt  support_cancellation.txt  universal_greeting.txt  universal_technical.txt
examples/results/: dogfood_report.json
memory/: ANALYXA-BLUEPRINT.md  ANALYXA-CHANGELOG.md  ANALYXA-DECISIONS.md  ANALYXA-STATE.md  CLAUDE.md
scripts/: dogfood.py
src/analyxa/: __init__.py  analyzer.py  batch.py  cli.py  config.py  embeddings.py  llm_client.py  prompt_builder.py  schema.py
src/analyxa/schemas/: coaching.yaml  sales.yaml  support.yaml  universal.yaml
src/analyxa/sinks/: json_sink.py  qdrant_sink.py  stdout_sink.py
src/analyxa/sources/: file_source.py  redis_source.py
tests/: test_analyzer.py  test_batch.py  test_cli.py  test_config.py  test_llm_client.py  test_multi_vertical.py  test_multilang.py  test_prompt_builder.py  test_qdrant_sink.py  test_redis_source.py  test_schema.py
