[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analyxa"
version = "0.1.0"
description = "Multi-dimensional extraction engine for AI conversations"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Next AI Ecosystem", email = "nextaiecosystem@gmail.com"}
]
keywords = ["ai", "conversations", "analytics", "llm", "extraction", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "redis>=5.0.0",
    "qdrant-client>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://analyxa.ai"
Repository = "https://github.com/next-ai-ecosystem/analyxa"
Documentation = "https://analyxa.ai/docs"

[project.scripts]
analyxa = "analyxa.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
analyxa = ["schemas/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
